deploy/kustomize/overlays/prod/patch-scale.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-stats-exporter
spec:
  replicas: 5
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  replicas: 3
